syntax = "proto3";

package GrpcPtzControl;

service PtzControl {
  // Sends a greeting
  rpc PtzDirect (PtzDirectRequest) returns (PtzDirectReply) {}
}

// The request message.
message PtzDirectRequest {
	PTZCommand ucommand = 1;
	int32 dwSpeed = 2;
	string deviceid = 3;
}

// The response message.
message PtzDirectReply {
  string message = 1;
}

enum PTZCommand {
	Stop = 0;
	Up = 1;
	UpLeft = 2;
	UpRight = 3;
	Down = 4;
	DownLeft = 5;
	DownRight = 6;
	Left = 7;
	Right = 8;
	Focus1 = 9;
	Focus2 = 10;
	Zoom1 = 11;
	Zoom2 = 12;
	Iris1 = 13;
	Iris2 = 14;
	SetPreset = 15;
	GetPreset = 16;
	RemovePreset = 17;
}